# r2d2

./: CMakeLists.txt  README.md  package.xml
config/: ball_tracker_params_sim.yaml  explore.yaml  main.rviz  mapper_params_online_async.yaml  my_controllers.yaml  navigation.yaml  slam.yaml
description/: camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
include/r2d2/: tracker.hpp  tracker_color.hpp  tracker_ml.hpp  tracker_v2.hpp
launch/: amcl.launch.py  ball_tracker.launch.py  exploration.launch.py  explore.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  navigation.launch.py  rplidar.launch.py  rsp.launch.py  slam.launch.py
maps/: map.pgm  map.yaml  map_serial.data
rviz/: main.rviz
src/: tracker.cpp  tracker_color.cpp  tracker_ml.cpp  tracker_v2.cpp
training_images/: README.md
worlds/: house.sdf
